--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 server.port=8081
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/womenempowerment?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/womenempowerment?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=trace
+
 
 #logging configuration
 logging.file.name=D:/spring/springLog.log
@@ -17,3 +19,14 @@ logging.level.com.zaxxer.hikari=INFO
 logging.level.org.springframework=INFO 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
+
+
+#JAVAX mailing configuration
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=womenesprit2022@gmail.com
+spring.mail.password=wwpldxgjzfizrovc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.starttls.enable=true
