--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
-server.port=8081
+
+
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/womenempowerment?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pif?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
-#logging configuration
-logging.file.name=D:/spring/springLog.log
-logging.file.max-size=10KB
-logging.level.com.zaxxer.hikari=INFO
-logging.level.org.springframework=INFO 
-logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.main.lazy-initialization=true
+#properties.setProperty("hibernate.temp.use_jdbc_metadata_defaults", "false");
